add next/prev links

--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -53,3 +53,6 @@ en:
     story_show:
       by: By
       credit: Credit
+      next: Next Story
+      previous: Previous Story
+      print: Save as PDF or print the story
