bug fix - ckeditor

--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -22,7 +22,7 @@ en:
       actions: Actions
       forset:
         slogan: ForSet - Communicating with Data
-      name: Red Legacy
+      name: The Red Legacy
       slogan: Evaluating the 100th anniversary of the Bolshevik Revolution.
       description: This is a description of the project that will appear in the meta tags.
       'no': 'No'
