--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -22,6 +22,8 @@ en:
       actions: Actions
       forset:
         slogan: ForSet - Communicating with Data
+      eurasianet:
+        slogan: Eurasianet
       name: The Red Legacy
       slogan: Evaluating the 100th anniversary of the Bolshevik Revolution.
       description: This is a description of the project that will appear in the meta tags.
@@ -32,6 +34,7 @@ en:
       twitter: Share on Twitter
       linkedin: Share on Instagram
       from: From
+      explore: EXPLORE
     links:
       page_contents: Edit Page Text
       admin: Admin Section
