--- a/config/locales/views/application/en.yml
+++ b/config/locales/views/application/en.yml
@@ -4,7 +4,7 @@ en:
     navbar_header:
       logo: Site Logo
       about: ABOUT
-      slogan: Evaluating the 100th anniversary of the Bolshevik Revolution
+      motto: Evaluating the 100th anniversary of the Bolshevik Revolution
       account:
         edit_profile: Edit Profile
         logout: Logout
