--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -26,7 +26,7 @@ en:
         motto: Eurasianet
       name: The Red Legacy
       motto: Evaluating the 100th anniversary of the Bolshevik Revolution.
-      description: This is a description of the project that will appear in the meta tags.
+      description: The Red Legacy presents a 360-degree view of the Bolshevik Revolution in 1917 and its lasting legacy. It features analysis from leading scholars in the United States, Europe and Russia.
       'no': 'No'
       'yes': 'Yes'
       show_title: "%{model}: %{title}"
