--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -62,6 +62,7 @@ en:
     story_show:
       image_caption: "%{cap}"
       image_credit: "( Photo: %{credit} )"
+      poster_title: Click to view full image
       by: By
       credit: Credit
       next: Next Story
