--- a/config/locales/shared/ru.yml
+++ b/config/locales/shared/ru.yml
@@ -30,17 +30,20 @@ ru:
       'no': 'No'
       'yes': 'Yes'
       show_title: "%{model}: %{title}"
-      facebook: Share on Facebook
-      twitter: Share on Twitter
-      linkedin: Share on Instagram
+      facebook: Поделиться в Facebook
+      twitter: Поделиться в Twitter
+      linkedin: Поделиться в Linkedin
       from: From
       explore: EXPLORE
     links:
       page_contents: Edit Page Text
       admin: Admin Section
       stories: Stories
+      about_images: About Images
     labels:
       translated_field: "%{field} (%{language})"
+      left: Left
+      right: Right
     locale:
       short:
         en: En
@@ -65,7 +68,7 @@ ru:
       poster_title: Click to view full image
       by: By
       credit: Credit
-      next: Next Story
-      previous: Previous Story
+      next: Следующая статья
+      previous: Предыдущая статья
       print: Версия для печати
       footnotes: Примечания
