add about text to home page

--- a/config/locales/views/root/en.yml
+++ b/config/locales/views/root/en.yml
@@ -3,5 +3,7 @@ en:
   root:
     index:
       coming_soon: Coming Soon
+      about1: The Red Legacy presents a 360-degree view of the Bolshevik Revolution's lasting legacy. It features analysis from leading scholars in the United States, Europe and Russia.
+      about2: A new story about the revolution will be published everyday through November 7.
     about:
       title: About
