--- a/config/locales/views/root/ru.yml
+++ b/config/locales/views/root/ru.yml
@@ -3,5 +3,7 @@ ru:
   root:
     index:
       coming_soon: В разработке
+      about1: Проект «Наследие Октября» предлагает панорамный обзор долгосрочных последствий Октябрьской революции, представляя Вашему вниманию аналитические статьи ведущих ученых США, Европы и России.
+      about2: С 25 октября по 7 ноября EurasiaNet.org будет ежедневно публиковать по одной статье на эту тему.
     about:
       title: О проекте
